<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel">Download</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <!--Main page-->
    <string name="glide_radio_button">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_radio_button">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_option_message">Please select a file to download.</string>

    <!-- Detail page-->
    <string name="file_name_downloaded">File Name:</string>
    <string name="status">Status:</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="ok_button">Ok</string>
    <string name="channel_id">download_channel</string>

</resources>
